--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,35 @@
 img {
     height: auto;
-    width: 100px;
+    width: 800px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 8px;
+    border-style: solid;
+}
+
+body {
+    text-align: center;
+    background-color: rgba(215, 237, 240, 0.432);
+    font-family: Georgia, Arial, sans-serif;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .main-header {
-    color: red;
+    color: rgba(27, 24, 24, 0.856);
+    font-size: 50px;
+    background-color: rgba(135, 207, 235, 0.541);
 }
+
+ul,
+ol {
+    display: inline-block;
+    text-align: left;
+}
+
+.list {
+    color: rgba(27, 24, 24, 0.856);
+    background-color: rgba(135, 207, 235, 0.541);
+}
+
